manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abfallkalender
  namespace: gamma-lightning-talk
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30429
  selector:
    app: abfallkalender
